[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "consultora-osint-engine"
version = "0.1.0"
description = "Open source OSINT engine for evidence-backed radiografias."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Consultora Diagonales" }
]
dependencies = [
  "dnspython>=2.6,<3",
  "requests>=2.31,<3"
]

[project.scripts]
osint-engine = "osint_engine.cli:main"

[tool.setuptools.packages.find]
include = ["osint_engine*"]
